# Virus

./: .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: README.md
tests/: test_card.py  test_card_type.py  test_colour.py
tests/assertions/: __init__.py  attributes.py
tests/utils/: test_circular_iterator.py
virus/: __init__.py  colour.py  type.py
virus/cards/: card.py
virus/extensions/attrs/validators/: __init__.py  validators.py
virus/utils/: __init__.py  circular_iterator.py
