[tool.poetry]
name = "virus"
version = "0.1.0"
description = ""
authors = ["ezeBalsamo <alexander.ezequiel.balsamo@gmail.com>"]
readme = "README.md"
packages = [{include = "virus"}, {include = "tests"}]

[tool.poetry.dependencies]
python = "^3.11"
attrs = "23.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "8.3.1"
pytest-cov = "5.0.0"
mypy = "1.11.0"
pre-commit = "3.7.1"

[[tool.mypy.overrides]]
module = ["virus.*", "tests.*"]
implicit_reexport = true

[tool.ruff]
target-version = "py312"
force-exclude = true # to respect exclusions (useful for pre-commit)

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812",   # missing-trailing-comma
    "D",        # pydocstyle
    "E501",     # line-too-long (we use black)
    "EM101",    # raw-string-in-exception
    "EM102",    # f-string-in-exception
    "ANN101",   # missing-type-self
    "TID252",   # relative-imports
    "TRY003",   # raise-vanilla-args (we do not need to create additional exceptions)
    "TCH",      # flake8-type-checking
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [ "F401" ] # unused-import
"tests/**/*.py" = [
    "S101",     # assert
    "PLR2004",  # magic-value-comparison
]

[tool.ruff.lint.mccabe]
max-complexity = 5

[tool.ruff.lint.isort]
force-single-line = true # Forces all from imports to appear on their own line.

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
